CD Action version fix 2

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -44,11 +44,11 @@ jobs:
 
       - name: Comment PR
         if: ${{ github.event.workflow_run.event == 'pull_request' }}
-        uses: marocchino/sticky-pull-request-comment@v3
+        uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: "CD Summary"
           message: |
-            ***Deployment completed successfully**
+            **Deployment completed successfully**
             - Image: `${{ env.IMAGE }}`
             - Command: `docker run --rm ${{ env.IMAGE }} 2 3`
             - Status: Success
