CD Action version fix 2

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Define image tag
         id: vars
         run: |
-          IMAGE=ghcr.io/${{ github.repository }}/sample_app:${{ github.ref_name || 'main' }}-${{ github.sha }}
+          IMAGE=ghcr.io/${{ github.repository }}/sample_app:${{ github.event.workflow_run.head_branch || 'main' }}-${{ github.event.workflow_run.head_sha }}
           echo "IMAGE=$IMAGE" >> $GITHUB_ENV
 
       - name: Pull image
@@ -42,13 +42,33 @@ jobs:
           echo "Running mock deployment..."
           docker run --rm ${{ env.IMAGE }} 2 3
 
+      - name: Download CI artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: test-results-3.12
+          workflow: CI
+          run-id: ${{ github.event.workflow_run.id }}
+
+      - name: Extract coverage and test results
+        id: results
+        run: |
+          COV=$(grep -oPm1 "(?<=<coverage.*line-rate=\")[0-9.]+" coverage.xml || echo "N/A")
+          TESTS=$(grep -oPm1 "(?<=tests=)[0-9]+" junit.xml || echo "N/A")
+          FAILURES=$(grep -oPm1 "(?<=failures=)[0-9]+" junit.xml || echo "N/A")
+          echo "COVERAGE=$COV" >> $GITHUB_ENV
+          echo "TESTS=$TESTS" >> $GITHUB_ENV
+          echo "FAILURES=$FAILURES" >> $GITHUB_ENV
+
       - name: Comment PR
         if: ${{ github.event.workflow_run.event == 'pull_request' }}
         uses: marocchino/sticky-pull-request-comment@v2
         with:
           header: "CD Summary"
           message: |
-            **Deployment completed successfully**
-            - Image: `${{ env.IMAGE }}`
+            **Mock Deployment completed successfully**
+
+            - Docker image: `${{ env.IMAGE }}`
+            - Tests run: ${{ env.TESTS }} | Failures: ${{ env.FAILURES }}
+            - Coverage: ${{ env.COVERAGE }}
             - Command: `docker run --rm ${{ env.IMAGE }} 2 3`
             - Status: Success
