--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -45,8 +45,7 @@ jobs:
       - name: Download CI artifacts
         uses: actions/download-artifact@v4
         with:
-          name: test-results-3.12
-          workflow: CI
+          name: test-results
           run-id: ${{ github.event.workflow_run.id }}
 
       - name: Extract coverage and test results
